# mmbwa

./: README.md  filter_script.py  filter_script2.py  pyproject.toml
mmbwa/: cli.py
mmbwa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mmbwa/filter_soft_clip/: filter_script.py
