[project]
name = "mmbwa"
version = "0.1.0"
description = "Realign soft-clipped reads with bwa mem after minimap2"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "typer[all]",
]

[project.scripts]
mmbwa = "mmbwa.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
